<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/appWhite">

    <Spinner
        android:id="@+id/spinnerRadioNames"
        style="@style/Spinners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/StatisticsTextView"
        android:textStyle="bold"
        android:text="@string/Radio"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerRadioNames"
        app:layout_constraintEnd_toStartOf="@+id/spinnerRadioNames"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinnerRadioNames" />

    <Spinner
        android:id="@+id/spinnerTimeFrom"
        style="@style/Spinners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerRadioNames" />

    <TextView
        android:id="@+id/textView2"
        style="@style/StatisticsTextView"
        android:textStyle="bold"
        android:text="@string/From"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerTimeFrom"
        app:layout_constraintEnd_toStartOf="@+id/spinnerTimeFrom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinnerTimeFrom" />


    <Button
        android:id="@+id/buttonSearch"
        style="@style/RadioButtonVolume"
        android:layout_margin="@dimen/_16sdp"
        android:onClick="searchButtonOnClick"
        android:text="@string/Search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTimeFrom" />

</android.support.constraint.ConstraintLayout>