<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/appWhite">

    <TextView
        android:id="@+id/textViewArtist"
        style="@style/RadioPlayingSongTextView"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTitle"
        style="@style/RadioPlayingSongTextView"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewArtist" />

    <Button
        android:id="@+id/buttonControlMusic"
        style="@style/RadioButton"
        android:onClick="buttonControlMusicOnClick"
        android:text="@string/Play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonVolumeMinus"
            style="@style/RadioButtonVolume"
            android:layout_weight="1"
            android:onClick="buttonVolumeMinusOnClick"
            android:text="@string/Minus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <SeekBar
            android:id="@+id/seekBarVolume"
            style="@style/RadioSeekBar"
            android:layout_gravity="center_vertical"
            android:layout_weight="10" />

        <Button
            android:id="@+id/buttonVolumePlus"
            style="@style/RadioButtonVolume"
            android:layout_weight="1"
            android:onClick="buttonVolumePlusOnClick"
            android:text="@string/Plus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>